Build Syzygy JNI bridge during Maven package